--- a/semv.toml
+++ b/semv.toml
@@ -1,10 +1,10 @@
 
 [release]
-  label = "release-candidate"
+  label = ""
   patch = 0
 
 [version]
   label = ""
-  major = 0
-  minor = 1
+  major = 1
+  minor = 0
   patch = 0
