--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,32 +1,32 @@
-name: Release Go project
-
-on:
-  push:
-    tags:
-      - "*" 
-
-jobs:
-  build:
-    name: GoReleaser build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # See: https://goreleaser.com/ci/actions/
-
-      - name: Set up Go 1.13
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.13
-        id: go
-
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@master
-        with:
-          version: latest
-          args: release --rm-dist
-          workdir: ./cmd/semv
-        env:
-          GITHUB_TOKEN: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
+#name: Release Go project
+#
+#on:
+#  push:
+#    tags:
+#      - "*" 
+#
+#jobs:
+#  build:
+#    name: GoReleaser build
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Check out code into the Go module directory
+#        uses: actions/checkout@v2
+#        with:
+#          fetch-depth: 0 # See: https://goreleaser.com/ci/actions/
+#
+#      - name: Set up Go 1.13
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: 1.13
+#        id: go
+#
+#      - name: Run GoReleaser
+#        uses: goreleaser/goreleaser-action@master
+#        with:
+#          version: latest
+#          args: release --rm-dist
+#          workdir: ./cmd/semv
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
