--- a/.pm/changelog.yml
+++ b/.pm/changelog.yml
@@ -1,4 +1,3 @@
-0.1.0-beta.1 (2021-03-06):
-- Add sub-command lincese
-"2021-03-05":
-- Initialized pm (Project Metadata)
+0.1.0-beta.1 (2021-03-10):
+  added:
+  - makefile add go-install go-build
