--- a/.pm/changelog.yml
+++ b/.pm/changelog.yml
@@ -1,3 +1,6 @@
 0.1.0-beta.1 (2021-03-10):
   added:
   - makefile add go-install go-build
+0.1.0-beta.1 (2021-03-12):
+  added:
+  - sub-command author and maintainer
